<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Paid">true</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_export">Export</string>
    <string name="menu_exportall">ExportAll</string>
    <string name="menu_search">Search</string>
    <string name="search_result">Search Results</string>
    <string name="graph_title">Distribution</string>
    <string name="menu_graph">Show graph</string> 

</resources>
